First commited as before_19046_rev2